tests/typing/error-var_ty_application/error.expected
File "tests/typing/error-var_ty_application/error.zf", line 2, character 24-27:
Error Cannot apply arguments to type variable a
