tests/typing/error-var_ty_application/error.zf

goal exists (a : type). a a.

